--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "package.json",
+    "package-lock.json",
+    "README.md"
   ],
   "scripts": {
     "build": "rimraf dist && tsc",
